tests/baselines/reference/sourceMapValidationDestructuringForOfArrayBindingPatternDefaultValues(target=es2015).errors.txt
sourceMapValidationDestructuringForOfArrayBindingPatternDefaultValues.ts(21,34): error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfArrayBindingPatternDefaultValues.ts(24,34): error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfArrayBindingPatternDefaultValues.ts(27,34): error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfArrayBindingPatternDefaultValues.ts(33,30): error TS2488: Type 'MultiSkilledRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfArrayBindingPatternDefaultValues.ts(39,30): error TS2488: Type 'MultiSkilledRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfArrayBindingPatternDefaultValues.ts(45,30): error TS2488: Type 'MultiSkilledRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfArrayBindingPatternDefaultValues.ts(49,28): error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfArrayBindingPatternDefaultValues.ts(52,28): error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfArrayBindingPatternDefaultValues.ts(55,28): error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfArrayBindingPatternDefaultValues.ts(58,32): error TS2488: Type 'MultiSkilledRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfArrayBindingPatternDefaultValues.ts(61,32): error TS2488: Type 'MultiSkilledRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfArrayBindingPatternDefaultValues.ts(64,32): error TS2488: Type 'MultiSkilledRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfArrayBindingPatternDefaultValues.ts(68,67): error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfArrayBindingPatternDefaultValues.ts(71,67): error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfArrayBindingPatternDefaultValues.ts(74,67): error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfArrayBindingPatternDefaultValues.ts(80,30): error TS2488: Type 'MultiSkilledRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfArrayBindingPatternDefaultValues.ts(86,30): error TS2488: Type 'MultiSkilledRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfArrayBindingPatternDefaultValues.ts(92,30): error TS2488: Type 'MultiSkilledRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfArrayBindingPatternDefaultValues.ts(96,44): error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfArrayBindingPatternDefaultValues.ts(99,44): error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfArrayBindingPatternDefaultValues.ts(102,44): error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.


==== sourceMapValidationDestructuringForOfArrayBindingPatternDefaultValues.ts (21 errors) ====
    declare var console: {
        log(msg: any): void;
    }
    type Robot = [number, string, string];
    type MultiSkilledRobot = [string, [string, string]];
    
    let robotA: Robot = [1, "mower", "mowing"];
    let robotB: Robot = [2, "trimmer", "trimming"];
    let robots = [robotA, robotB];
    function getRobots() {
        return robots;
    }
    
    let multiRobotA: MultiSkilledRobot = ["mower", ["mowing", ""]];
    let multiRobotB: MultiSkilledRobot = ["trimmer", ["trimming", "edging"]];
    let multiRobots = [multiRobotA, multiRobotB];
    function getMultiRobots() {
        return multiRobots;
    }
    
    for (let [, nameA = "noName"] of robots) {
                                     ~~~~~~
!!! error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameA);
    }
    for (let [, nameA = "noName"] of getRobots()) {
                                     ~~~~~~~~~~~
!!! error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameA);
    }
    for (let [, nameA = "noName"] of [robotA, robotB]) {
                                     ~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameA);
    }
    for (let [, [
        primarySkillA = "primary",
        secondarySkillA = "secondary"
    ] = ["skill1", "skill2"]] of multiRobots) {
                                 ~~~~~~~~~~~
!!! error TS2488: Type 'MultiSkilledRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(primarySkillA);
    }
    for (let [, [
        primarySkillA = "primary",
        secondarySkillA = "secondary"
    ] = ["skill1", "skill2"]] of getMultiRobots()) {
                                 ~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'MultiSkilledRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(primarySkillA);
    }
    for (let [, [
        primarySkillA = "primary",
        secondarySkillA = "secondary"
    ] = ["skill1", "skill2"]] of [multiRobotA, multiRobotB]) {
                                 ~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'MultiSkilledRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(primarySkillA);
    }
    
    for (let [numberB = -1] of robots) {
                               ~~~~~~
!!! error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(numberB);
    }
    for (let [numberB = -1] of getRobots()) {
                               ~~~~~~~~~~~
!!! error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(numberB);
    }
    for (let [numberB = -1] of [robotA, robotB]) {
                               ~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(numberB);
    }
    for (let [nameB = "noName"] of multiRobots) {
                                   ~~~~~~~~~~~
!!! error TS2488: Type 'MultiSkilledRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameB);
    }
    for (let [nameB = "noName"] of getMultiRobots()) {
                                   ~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'MultiSkilledRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameB);
    }
    for (let [nameB = "noName"] of [multiRobotA, multiRobotB]) {
                                   ~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'MultiSkilledRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameB);
    }
    
    for (let [numberA2 = -1, nameA2 = "noName", skillA2 = "skill"] of robots) {
                                                                      ~~~~~~
!!! error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameA2);
    }
    for (let [numberA2 = -1, nameA2 = "noName", skillA2 = "skill"] of getRobots()) {
                                                                      ~~~~~~~~~~~
!!! error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameA2);
    }
    for (let [numberA2 = -1, nameA2 = "noName", skillA2 = "skill"] of [robotA, robotB]) {
                                                                      ~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameA2);
    }
    for (let [nameMA = "noName", [
        primarySkillA = "primary",
        secondarySkillA = "secondary"
    ] = ["skill1", "skill2"]] of multiRobots) {
                                 ~~~~~~~~~~~
!!! error TS2488: Type 'MultiSkilledRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameMA);
    }
    for (let [nameMA = "noName", [
        primarySkillA = "primary",
        secondarySkillA = "secondary"
    ] = ["skill1", "skill2"]] of getMultiRobots()) {
                                 ~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'MultiSkilledRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameMA);
    }
    for (let [nameMA = "noName", [
        primarySkillA = "primary",
        secondarySkillA = "secondary"
    ] = ["skill1", "skill2"]] of [multiRobotA, multiRobotB]) {
                                 ~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'MultiSkilledRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameMA);
    }
    
    for (let [numberA3 = -1, ...robotAInfo] of robots) {
                                               ~~~~~~
!!! error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(numberA3);
    }
    for (let [numberA3 = -1, ...robotAInfo] of getRobots()) {
                                               ~~~~~~~~~~~
!!! error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(numberA3);
    }
    for (let [numberA3 = -1, ...robotAInfo] of [robotA, robotB]) {
                                               ~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(numberA3);
    }